TODO:
    - Kernel memory statistics
    - Statistics for various programs (postgresql, apache, postfix,...)
	- Output statistics in text-form (via rrdtool fetch)

Version HEAD
    - Smain.rb: Sets values for available ram and swap on startup (for Smemory.rb)
    - Changend Sh based install-script to Ruby+Rant based script (embedded rant into install.rb for compat.)
    - Slight modifications of the config-parts (needed for new installer)
    - Changed syntax of module.graph(), accepts second argument for output filename
      returns png-file if filename == "-", else it returns the size of the file (width\nheight)
    - Snetwork.rb: Merged interface and interface-error graphs
	- CGI-Script (e.g. or like rrdcgi) to generate graphs on the fly - still not activated
    
Version 2.18 - 2009-06-27
    - Fixed install.sh (no config created)
    - Removed old and broken template files
    - Added error graph for network interfaces
    - Added back-to-index links to html-files
    - Added user statistics

Version 2.17 - 2008-10-28
    - Changed configuration to YAML
    - Changed class variables to instance variables
    - changed buffer objects to local scope (were: instance variables)
    - Replaced third party RRDtool module with RRDTools own RRD module

Version 2.16 - 2007-05-07
    - Fixed memory graph
    - Fixed disk graphs (32bit integer overflows)
    - Removed unnecessary system calls from disk statistics
    - Fixed graph creations of cpu, load, processes
    - install.sh removed -s flag from hostname command

Version 2.15 - 2007-05-06
    - Added README

Version 2.14 - 2007-04-30
    - Fixed install.sh
    - Fixed index.html
    - Fixed graphs
    - Fixed hdd statistics

Version 2.13 - 2007-04-29
    - First public release

Version 2.12 - 2007-04-29
    - Fixed Typo in install.sh
    - Chmod +x as default for install.sh
    - Added --pid-file argument to sysstat.rb
    - sysstat.rb now writes and removes pidfile

Version 2.11 - 2007-04.26