@@ -1,6 +1,0 @@
-
-subdirs "bin"
-subdirs "classes"
-subdirs "conf"
-subdirs "html"
-subdirs "rc"
